feat: add MongoDB integration

--- a/.env
+++ b/.env
@@ -5,3 +5,5 @@ NEXT_PUBLIC_CLERK_SIGN_IN_KEY=/sign-in
 NEXT_PUBLIC_CLERK_SIGN_UP_KEY=/sign-up
 NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_KEY=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_KEY=/
+
+MONGODB_URL=mongodb+srv://ImgFill:Z3QbLD3kGYFqWa9F@imgfill.pwn7o.mongodb.net/?retryWrites=true&w=majority&appName=imgFill
