--- a/.env
+++ b/.env
@@ -7,3 +7,5 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_IN_KEY=/
 NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_KEY=/
 
 MONGODB_URL=mongodb+srv://ImgFill:Z3QbLD3kGYFqWa9F@imgfill.pwn7o.mongodb.net/?retryWrites=true&w=majority&appName=imgFill
+
+WEBHOOK_SECRET=whsec_6aUWD9ea1t+okMVJfYYq9IeU98blvaxA
