feat: finalize transformation and begin Stripe integration

--- a/.env
+++ b/.env
@@ -9,3 +9,7 @@ NEXT_PUBLIC_CLERK_AFTER_SIGN_UP_KEY=/
 MONGODB_URL=mongodb+srv://ImgFill:Z3QbLD3kGYFqWa9F@imgfill.pwn7o.mongodb.net/?retryWrites=true&w=majority&appName=imgFill
 
 WEBHOOK_SECRET=whsec_6aUWD9ea1t+okMVJfYYq9IeU98blvaxA
+
+NEXT_PUBLIC_CLOUDINARY_CLOUD_NAME=dd61kigpc
+CLOUDINARY_API_KEY=939314612727652
+CLOUDINARY_API_SECRET=P-ABGeiSRavzeqTVkgc2sGQSu9U
